removed several logs from browser related to tooltips.js. fixed css not having effect in calendar component. fixed test running over weekend. fixed several dates overlapping weekends. fixed created and update not being initialized.

--- a/src/main/frontend/themes/kassandra/components/vaadin-dialog-overlay.css
+++ b/src/main/frontend/themes/kassandra/components/vaadin-dialog-overlay.css
@@ -1,11 +1,9 @@
 /* Custom styling for dialog overlay */
-/*[part='backdrop']
+[part='backdrop']
 {
-  /* Adjust the alpha channel (0.3) to control darkness (lower = less dark) */
   background: rgba(25, 25, 25, 0.3);
 
-  /* Apply a blur effect to the background */
   backdrop-filter: blur(1px);
-  -webkit-backdrop-filter: blur(1px); /* For Safari compatibility */
+  -webkit-backdrop-filter: blur(1px);
 }
-*/
+
