--- a/src/main/frontend/themes/kassandra/styles.css
+++ b/src/main/frontend/themes/kassandra/styles.css
@@ -42,24 +42,22 @@
 @import url('./components/vaadin-dialog-overlay.css');
 @import url('./components/vaadin-grid-sorter.css');
 
-:root {
-  /* Calendar component colors - light theme */
-  --calendar-vacation-color: #D4EDDA;
-  --calendar-vacation-text-color: #155724;
-  --calendar-sick-color: #F8D7DA;
-  --calendar-sick-text-color: #721C24;
-  --calendar-holiday-color: #D1ECF1;
-  --calendar-holiday-text-color: #0C5460;
-  --calendar-trip-color: #6C757D;
-  --calendar-trip-text-color: #FFFFFF;
-  --calendar-weekend-color: #F0F0F0;
-  --calendar-month-name-color: #DC3545;
-  --calendar-normal-day-color: #FFFFFF;
-  --calendar-normal-day-text-color: #000000;
-  --calendar-filling-day-color: #FFFFFF;
-  --calendar-filling-day-text-color: #AAAAAA;
-
-
+/* Calendar component colors - light theme */
+body {
+    --calendar-vacation-color: #D4EDDA;
+    --calendar-vacation-text-color: #155724;
+    --calendar-sick-color: #F8D7DA;
+    --calendar-sick-text-color: #721C24;
+    --calendar-holiday-color: #D1ECF1;
+    --calendar-holiday-text-color: #0C5460;
+    --calendar-trip-color: #6C757D;
+    --calendar-trip-text-color: #FFFFFF;
+    --calendar-weekend-color: #F0F0F0;
+    --calendar-month-name-color: #DC3545;
+    --calendar-normal-day-color: #FFFFFF;
+    --calendar-normal-day-text-color: #000000;
+    --calendar-filling-day-color: #FFFFFF;
+    --calendar-filling-day-text-color: #AAAAAA;
 }
 
 /* Calendar component styles */
@@ -128,7 +126,6 @@
   --lumo-shade-40pct: hsla(0, 0%, 0%, 0.4);
   --lumo-box-shadow-xl: 0 4px 24px -3px hsla(0, 0%, 0%, 0.2), 0 18px 64px -8px hsla(0, 0%, 0%, 0.4);
 
-  /* Calendar component colors - dark theme */
   --calendar-vacation-color: #82ed9c;
   --calendar-vacation-text-color: #FFFFFF;
   --calendar-sick-color: #f998a1;
@@ -145,6 +142,7 @@
   --calendar-filling-day-color: #1E1E1E;
   --calendar-filling-day-text-color: #666666;
 }
+
 
 /* Dark theme specific styles */
 [theme~="dark"] .navbar-custom {
